--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.0",
     "guid-typescript": "^1.0.9",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
