--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-window": "^2.2.1",
     "redux-persist": "^6.0.0",
     "redux-persist-indexeddb-storage": "^1.0.4"
   },
